--- a/BaiGiai/main.tex
+++ b/BaiGiai/main.tex
@@ -8,6 +8,7 @@
 \usepackage{setspace}
 \usepackage{array}
 \usepackage{booktabs}
+\usepackage{subcaption}
 
 \setlength{\parindent}{0pt} % bỏ thụt đầu dòng
 \setlength{\mathindent}{0pt} % căn lề trái cho math
