--- a/BaiGiai/Cau7.tex
+++ b/BaiGiai/Cau7.tex
@@ -46,7 +46,7 @@ Việc chọn giá trị điện được thực hiện như sau:
     \end{equation*}
 \end{itemize}
 
-Chọn OPAMP OPA2333 vì các thông số tham khảo được:
+Chọn OPAMP OPA2333 với các thông số tham khảo được:
 \begin{itemize}
     \item Khả năng rail to rail ở ngõ ra: có.
     \item Vos (độ dịch chuyển ngõ vào): 2$\mu$V.
