update_Iib_Ios_tinh_toan

--- a/BaiGiai/Cau3.tex
+++ b/BaiGiai/Cau3.tex
@@ -39,6 +39,7 @@ $\Rightarrow V_0 = -4 \cdot (-2V_1) - 2V_2 = 8V_1 - 2V_2$ \\[8pt]
 
 \begin{flushleft}
 \textbf{Xét ảnh hưởng của $V_{os}$ lên $V_0$:} \\[8pt]
+
 \textbf{Xét tầng 1:} \\[4pt]
 Theo định lý xếp chồng: \\[2pt]
 Cho $V_{os} = 0 \Rightarrow V_{o1} = -\dfrac{2R}{R}V_1 = -2V_1 \quad (1)$ \\[6pt]
@@ -64,6 +65,19 @@ $\Rightarrow$ \fbox{$V_0 = 8V_1 - 2V_2 \pm 12V_{os}$}
 \textbf{Nhận xét:} \text{ sử dụng phần mềm mô phỏng cho thấy kết quả gần đúng với tính toán lý thuyết.} \\[10pt]
 \begin{flushleft}
 \textbf{Xét ảnh hưởng của $I_{ib}$ và $I_{os}$ tại ngõ ra:} \\[8pt]
+\[
+\begin{cases}
+\dfrac{I^+ + I^-}{2} = 20\,\text{mA} \\[6pt]
+I^+ - I^- = 0
+\end{cases}
+\Rightarrow
+\begin{cases}
+I^+ = I^- = 20\,\text{mA}
+\end{cases}
+\]
+\\[8pt]
+
+\text{Vậy: } \fbox{$\displaystyle I^+ = I^- = 20\,\text{mA}$} \\
 \textbf{Xét tầng 1:} \\[4pt]
 Cho $i^+ = i^- = 0 \Rightarrow V_{O1} = -\dfrac{2R}{R}V_1 = -2V_1 \quad (1)$ \\[6pt]
 Cho $V_1 = 0 \Rightarrow V^+ = V^- = 0 \Rightarrow I_2 = 0$ \\[4pt]
