sua_gi_do_trong_Cau4

--- a/BaiGiai/Cau4.tex
+++ b/BaiGiai/Cau4.tex
@@ -92,7 +92,9 @@ $\boxed{V_{O2} = -\dfrac{20}{3}V_{in} \pm 8V_{OS}}$
 \end{figure}
 \textbf{Nhận xét:} \text{giá trị $v_o$ đo được bằng phần mềm mô phỏng gần đúng với giá trị tính toán.}
 
+
 \begin{flushleft}
+\textbf{Xét ảnh hưởng $I_{ib}$ và $I_{os}$ lên ngõ ra $V_o$}\\
 \textbf{Xét tầng 1, ta có:}\\[4pt]
 Cho $V_{O2} = V_{in} = 0$\\[4pt]
 $\Rightarrow V^+ = V^- = 0$ (V)\\[4pt]
