--- a/BaiGiai/Cau2.tex
+++ b/BaiGiai/Cau2.tex
@@ -1,2 +1,142 @@
 \section{Câu 2}
+Tìm công thức liên hệ giữa $I_L$ và $V_i$ (hình a) và giữa $I_L$ và $V_1 - V_2$ (hình b).
 
+a. Giả sử OPAMP đang dùng là lí tưởng.
+
+b. Giả sử cả 2 OPAMP có $V_{io}=100\,\mathrm{\mu V}$, $I_{io}=4\,\mathrm{nA}$, $I_{ib}=18\,\mathrm{nA}$.
+
+Tìm ảnh hưởng của điều kiện không lý tưởng của OPAMP lên ngõ ra $I_L$.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.6]{image/De_C2.png} 
+\end{figure}
+
+\begin{center}
+\textbf{Bài giải}
+\end{center}
+
+
+Đối với hình a:\\
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.2]{image/C2_a1.png} 
+\end{figure}
+
+Xét nút $V^{-}$:
+\begin{flalign*}
+& \frac{V_i - V^-}{R_A} = -\frac{V_{o1} - V^-}{R_1} \quad(\text{theo chiều dòng}) && \\
+& \Rightarrow V^- = \frac{V_i + V_{o1}}{2} \quad(\text{nếu }R_A=R_1) && 
+\end{flalign*}
+
+Tại $V^{+}$ (phân chia điện áp bởi hai trở bằng nhau):
+\[
+V^{+}=V_{o2}\cdot\frac{R_2}{R_2+R_2}=\frac{V_{o2}}{2}.
+\]
+
+Vì op-amp ở vùng phản hồi âm nên $V^{+}=V^{-}$. Do đó:
+\[
+\frac{V_{o2}}{2}=\frac{V_i+V_{o1}}{2}\quad\Rightarrow\quad V_i=V_{o2}-V_{o1}.
+\]
+
+Dòng tải theo $R_L$ (ghi theo ghi chú):
+\[
+I_L=\frac{V_i}{R_L}=\frac{V_{o1}}{R_L}=\frac{V_{o2}-V_i}{R_L}.
+\]
+\fbox{$\Rightarrow I_L=\frac{V_{o2}-V_i}{R_L}$}
+\\
+Đối với hình b:\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.2]{image/C2_a2.jpg} 
+\end{figure}
+
+Từ mạch điện, ta có:
+\begin{flalign*}
+& V_{o2} - V_{o1} \cdot \frac{Z_L}{Z_L + R_x} = V_L \quad\Rightarrow\quad V_{o1} = \frac{V_L(Z_L + R_x)}{Z_L} && \\[1ex]
+& V_{o1} = \left(1 + \frac{R_2}{R_1}\right)\left(\frac{R_2}{R_1 + R_2}\right)(V_2 - V_{o2}) - \frac{R_2}{R_1}\cdot V_1 && \\[1ex]
+& \Rightarrow \frac{V_L(Z_L + R_x)}{Z_L} = \left(1 + \frac{R_2}{R_1}\right)\left(\frac{R_2}{R_1 + R_2}\right)(V_2 - V_L) - \frac{R_2}{R_1}\cdot V_1 && \\[2ex]
+& \Rightarrow I_L\cdot(Z_L + R_x) = \left(1 + \frac{R_2}{R_1}\right)\left(\frac{R_2}{R_1 + R_2}\right)(V_2 - I_L\cdot R_L) - \frac{R_2}{R_1}\cdot V_1 && \\[2ex]
+& \Rightarrow I_L\left[Z_L + R_x + R_L\cdot\left(1 + \frac{R_2}{R_1}\right)\left(\frac{R_2}{R_1 + R_2}\right)\right] = \left(1 + \frac{R_2}{R_1}\right)\left(\frac{R_2}{R_1 + R_2}\right)\cdot V_2 - \frac{R_2}{R_1}\cdot V_1 && \\[3ex]
+\end{flalign*}
+
+\fbox{$\displaystyle
+\Rightarrow I_L = \frac{\left(1 + \frac{R_2}{R_1}\right)\left(\frac{R_2}{R_1 + R_2}\right)\cdot V_2 - \frac{R_2}{R_1}\cdot V_1}{Z_L + R_x + R_L\left(1 + \frac{R_2}{R_1}\right)\left(\frac{R_2}{R_1 + R_2}\right)}
+$}
+\\
+Câu b\\
+Đối với hình a:\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{image/C2_b1.png} 
+\end{figure}
+
+\begin{flalign*}
+& V^- = V_{o1}\cdot\frac{R_1}{R_A + R_1} = \frac{V_{o1}}{2} && \\[1ex]
+& V^+ = V_{o2} && \\[1ex]
+& V^- = V^+ \Rightarrow \frac{V_{o1}}{2} = V_{o2} \Rightarrow V_{o1} = 2V_{o2} &&
+\end{flalign*}
+
+Xét tầng 2:\\
+\begin{flalign*}
+& V^+ = V_{o1} + V_{o2} = 3V_{o2} && \\[1ex]
+& I_L = \frac{V^-}{R_L} = \frac{V^+}{R_L} = \frac{3V_{o2}}{R_L} &&
+\end{flalign*}
+
+Xét ảnh hưởng của dòng:\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{image/C2_b3.png} 
+\end{figure}
+
+Tại dòng của $I_b$ và $I_{os}$:
+\begin{flalign*}
+& \begin{cases}
+I_b = \frac{I_1 + I_2}{2} \\[1ex]
+I_{os} = |I_1 - I_2|
+\end{cases} \Rightarrow
+\begin{cases}
+I^+ = 20\ \text{nA} \\
+I^- = 16\ \text{nA} \\
+I^+ = 16\ \text{nA} \\
+I^- = 20\ \text{nA}
+\end{cases} &&
+\end{flalign*}
+
+Ta có:
+\begin{flalign*}
+& V_A = -I^+ \cdot R_2//R_2 = -I^+ \cdot \frac{R_2}{2} && \\[2ex]
+& I_1 = I^- + I_2 && \\[1ex]
+& \Rightarrow I_1 = I^- + \frac{V_A}{R_1} && \\[1ex]
+& = I^- + \frac{-I^+ \cdot R_2}{2R_1} && \\[2ex]
+& \Delta V_1 - V_A = I_1 \cdot R_2 && \\[1ex]
+& \Rightarrow \Delta V_1 = \left(I^- - \frac{I^+ \cdot R_2}{2R_1}\right)\cdot R_2 + V_A && \\[2ex]
+& = \left(I^- - \frac{I^+ \cdot R_2}{2R_1}\right)\cdot R_2 - I^+ \cdot \frac{R_2}{2} &&
+\end{flalign*}
+Đối với hình b:\\
+Xét ảnh hưởng do Vos:\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{image/C2_b4.png} 
+\end{figure}
+
+Xét $0 = V_{os} - \frac{V_{o1} - V_{o2}}{R_2}$:
+\begin{flalign*}
+& -V_{os}\cdot R_2 = R_1V_{os} - R_1V_{o1} && \\[1ex]
+& \Rightarrow V_{o1} = V_{os}\cdot(R_1 + R_2) && \\[2ex]
+& \Rightarrow \text{Ảnh hưởng của }V_{os}\text{ gây ra lỗi }\Delta V_{o1} = V_{os}(R_1 + R_2) && \\[2ex]
+& \boxed{\Rightarrow \Delta I_L = \frac{\Delta V_{o1}}{R_x + Z_L} = \frac{V_{os}(R_1 + R_2)}{R_x + Z_L}} &&
+\end{flalign*}
+
+\textbf{Khi ảnh hưởng của $I_b$ và $I_{os}$}
+
+\begin{flalign*}
+& V^+ = -I^+\cdot R_2\parallel R_2 && \\[2ex]
+& I_1 = \frac{V^-}{R_1} = \frac{V^+}{R_1} = -\frac{I^+\cdot R_2\parallel R_2}{R_1} && \\[2ex]
+& I_2 = I_1 + I^- && \\[2ex]
+& \Rightarrow I_2 = -\frac{I^+\cdot R_2\parallel R_2}{R_1} + I^- && \\[2ex]
+& \Delta V_{o1} - V^- = I_2\cdot R_2 && \\[2ex]
+& \Rightarrow \Delta V_{o1} = \left(-\frac{I^+\cdot R_2\parallel R_2}{R_1} + I^-\right)\cdot R_2 + (-I^+\cdot R_2\parallel R_2) && \\[2ex]
+& \boxed{I_L = \frac{|\Delta V_{o1}|}{Z_L + R_x}} &&
+\end{flalign*}
